; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_oid.c_git_oid_tostr_s.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_oid.c_git_oid_tostr_s.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i8* }

@GIT_GLOBAL = common dso_local global %struct.TYPE_2__* null, align 8
@GIT_OID_HEXSZ = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @git_oid_tostr_s(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  store i32* %0, i32** %2, align 8
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @GIT_GLOBAL, align 8
  %5 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %4, i32 0, i32 0
  %6 = load i8*, i8** %5, align 8
  store i8* %6, i8** %3, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = load i64, i64* @GIT_OID_HEXSZ, align 8
  %9 = add nsw i64 %8, 1
  %10 = load i32*, i32** %2, align 8
  %11 = call i32 @git_oid_nfmt(i8* %7, i64 %9, i32* %10)
  %12 = load i8*, i8** %3, align 8
  ret i8* %12
}

declare dso_local i32 @git_oid_nfmt(i8*, i64, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
